# Final2x-core

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: CI-test.yml  Release.yml  pip-test.yml
Final2x_core/: config.py
scripts/: gen_config.py  gen_pretrained_model_name.py
tests/: test_config.py  test_save_format.py  test_targetscale.py  util.py
